--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1 {
 
 div {
     margin: 0 auto;
-    padding: 10px;
+    padding: ;
     max-width: 400px;
     background-color: rgb(125, 255, 179);
     border-radius: 10px;
@@ -18,16 +18,27 @@ div {
 }
 
 li {
+    display: flex;
+    flex-direction: column;
+    align-items: 0 auto;
     margin: 10%;
+    padding: 10px;
     border-radius: 10px;
     border-style: solid;
     border-width: 1px;
     background-color: rgb(255, 133, 133);
-    padding: 20px;
     list-style-type: none;
 }
 
 label {
     display: flex;
-    align-items: center;            
+    align-items: 0 auto;
+    margin: 1px;
+}
+
+#ul {
+    display: flex;
+    flex-direction: column;
+    align-items: ;
+    margin: ;
 }
