--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .first {
     display: flex;
     align-items: center;
-    : 20px;gap
+    gap: 20px;
     flex-direction: column;
     justify-content: center;
     border: 1px solid black;
@@ -36,7 +36,6 @@ body {
 .third {
     display: flex;
     justify-content: left;
-    align-items: ;
 }
 
 .fourth {
